2008-07-02  Paul Pogonyshev  <pogonyshev@gmx.net>

	* pygtk-gtkmenu.xml (gtk.Menu.attach_to_widget): Fix 'detach_cb'
	argument list to reflect realities.  Stress that the order is
	different from GTK+ C API.

2008-06-26  Paul Pogonyshev  <pogonyshev@gmx.net>

	* pygtk-gtkbuilder.xml: Remove all mentions of 'length' parameter
	to gtk.Builder.add_from_string.  See 'gtk/gtk-2.12.defs' for
	explanation.

2008-06-11  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkdialog.xml: Fix a typo.
	Fixes #537710, patch from jeblinux # gmail com

2008-06-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile.am:
	* pygtk-gtk-classes.xml:
	* pygtk-gtkrecentaction.xml: Add docs for gtk.RecentAction.

2008-06-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gdkwindow.xml: Add docs for get_type_hint, fixes #536906.

2008-05-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gladexml.xml: Fix root default value to None instead of "", Fix
	#518387, thanks to Sylvain Beucler.

	* pygtk-gobject.xml: Fix chain() method description, Fix
	#520833, thanks to Thomas D Ahle for the description.

	* pygtk-gdkvisual.xml: Fix gtk.gdk.visual_get_best_depth description,
	#527155, reported by:  Björn Lindqvist.

	* pygtk-gtkscrolledwindow.xml: Fix a small typo,
	#528205 patch contributed by: Johan Euphrosine.

2008-03-03  Benjamin Berg  <benjamin@sipsolutions.net>

	* pygtk-gtk-constants.xml:
	Fix a typo (bug #520067).

2008-02-08  Paul Pogonyshev  <pogonyshev@gmx.net>

	* pygtk-gtkbox.xml: Don't claim gtk.HBox and gtk.VBox are the only
	derivatives of gtk.Box.

2008-02-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* pygtk-gtkcellrenderertext.xml: Add a note in alignment property
	to mention xalign for the whole text. Fix #510839 patch contributed
	by: Kjell Braden.

2008-01-29  Paul Pogonyshev  <pogonyshev@gmx.net>

	* pygtk-pangolayout.xml: Replace "one thousandth" with "1 /
	pango.SCALE" where appropriate.

2008-01-29  Paul Pogonyshev  <pogonyshev@gmx.net>
