@@ -700,7 +700,7 @@ attribute set.</para>
       <variablelist>
 	<varlistentry>
 	  <term><emphasis>Returns</emphasis>&nbsp;:</term>
-	  <listitem><simpara>a Unicode character, or 0 if the textiter is
+	  <listitem><simpara>a Unicode character, or \0 character if the textiter is
 not dereferenceable</simpara></listitem>
 	</varlistentry>
       </variablelist>
@@ -708,11 +708,11 @@ not dereferenceable</simpara></listitem>
       <para>The <methodname>get_char</methodname>() method returns the
 Unicode character at this textiter location. If the textiter points at a
 non-character element, such as an image embedded in the buffer, the Unicode
-"unknown" character 0xFFFC is returned. If invoked on the end textiter, zero
-is returned; zero is not a valid Unicode character. So you can write a loop
+"unknown" character 0xFFFC is returned. If invoked on the end textiter, the null
+character is returned; \0 is not a valid Unicode character. So you can write a loop
 which ends when the <link
 linkend="method-gtktextiter--get-char"><methodname>get_char</methodname>()</link> 
-method returns 0.</para>
+method returns \0.</para>
 
     </refsect2>
 
