@@ -1,8 +1,11 @@
 2008-07-02  Paul Pogonyshev  <pogonyshev@gmx.net>
 
+	* pygtk-gtktextiter.xml (gtk.TextIter.get_char): It returns \0 if
+	out of data, not 0: different things in Python (bug #538777).
+
 	* pygtk-gtkmenu.xml (gtk.Menu.attach_to_widget): Fix 'detach_cb'
 	argument list to reflect realities.  Stress that the order is
-	different from GTK+ C API.
+	different from GTK+ C API (bug #541010).
 
 2008-06-26  Paul Pogonyshev  <pogonyshev@gmx.net>
 
